--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "modernizr": "2.8.x",
     "angular": "1.3.x",
+    "bourbon": "4.0.2",
     "modernizr" : "2.8.x",
     "jquery" : "2.x.x",
     "angular-animate" : "1.3.x",
