--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,4 @@
-.editorconfig {
+{
   "node": true,
   "esnext": true,
   "bitwise": true,
@@ -21,6 +21,10 @@
   "white": true,
   "validthis": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "_": false,
+    "$": false,
+    "alert": false,
+    "document": false
   }
 }
