--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "bourbon": "4.0.2",
     "modernizr" : "2.8.x",
     "jquery" : "2.x.x",
+    "underscore" : "1.5.2",
     "angular-animate" : "1.3.x",
     "angular-cookies" : "1.3.x",
     "angular-touch" : "1.3.x",
